--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,12 @@
     "description": "图片验证码生成器",
     "keywords": [
         "captcha",
-        "验证码"
+        "验证码",
+        "laravel",
+        "lumen",
+        "thinkphp",
+        "hyperf",
+        "easyswoole"
     ],
     "license": "MIT",
     "authors": [
